# IBM-Generative-AI-Applications-with-RAG-and-LangChain

./: .gitignore  README.md  pyproject.toml
notebooks/: Final Project Tasks.ipynb
src/qa_chat_bot/: app.py
