[project]
name = "qa-chat-bot"
version = "0.1.0"
description = ""
authors = [{ name = "akhildev-mj", email = "akhildev.tech@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12.4,<3.13"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "langchain-ibm (>=0.3.10,<0.4.0)",
    "chromadb (>=1.0.7,<2.0.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "gradio (>=5.29.0,<6.0.0)",
    "ibm-watsonx-ai (>=1.3.13,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "qa_chat_bot", from = "src" }]

[tool.poetry.scripts]
start = "qa_chat_bot.app:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
